--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -1,49 +1,49 @@
-.navbar {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 72px;
-	font-size: var(--font-size-16xl);
-	color: var(--color-deepskyblue);
-	font-family: var(--font-poppins);
-	background-color: #2c2c2c;
+.navContainer {
+	background-color: var(--color-gray-100);
+
+	padding: 10px 200px;
 }
-.navbarChild {
-	position: absolute;
-	left: 0;
-	width: 1440px;
-}
-.logo2 {
-	position: absolute;
-	top: 10px;
-	left: 180px;
-	font-weight: 600;
-}
-.buttons1 {
-	position: absolute;
-	top: calc(50% - 18px);
-	right: 196px;
-	overflow: hidden;
-	display: flex;
-	flex-direction: row;
-	align-items: flex-start;
-	justify-content: flex-start;
-	font-size: var(--desktop-menu-size);
-	font-family: var(--desktop-h3);
-}
-.signUpWrapper {
-	border: 1px solid var(--color-deepskyblue);
-	overflow: hidden;
-	padding: var(--padding-5xs) var(--padding-base);
+
+.nav {
 	align-items: center;
 	display: flex;
-	flex-direction: row;
-	justify-content: flex-start;
+	justify-content: space-between;
+	width: 100%;
 }
-.signUp {
-	position: relative;
-	line-height: 20px;
-	text-transform: uppercase;
+.navLink {
+	text-decoration: none;
+	color: inherit;
+}
+.label {
+	border: 0px none;
+}
+
+.logo {
+	color: var(--color-deepskyblue);
+	font-family: "Poppins-SemiBold", Helvetica;
+	font-size: 35px;
 	font-weight: 600;
+	left: 0;
+	letter-spacing: 0;
+	line-height: normal;
+	position: relative;
+	top: 0;
+}
+
+.buttonStraight {
+	align-items: center;
+	border: 1px solid;
+	border-color: var(--color-deepskyblue);
+	display: inline-flex;
+	gap: 10px;
+	padding: 8px 16px;
+	position: relative;
+}
+
+.smallButton {
+	color: var(--color-deepskyblue);
+	margin-top: -1px;
+	position: relative;
+	white-space: nowrap;
+	width: fit-content;
 }
