--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -27,6 +27,7 @@ body {
 	/* Colors */
 	--color-black: #000;
 	--color-deepskyblue: #1eb5e4;
+	--color-deepskyblue-deep: #006f91;
 	--color-gray-100: #2c2c2c;
 	--color-gray-200: #232323;
 	--color-white: #fff;
