--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -33,6 +33,7 @@ body {
 	--color-white: #fff;
 	--color-lightslategray: #9a95a3;
 	--general-blue: #381ddb;
+	--color-background: #232323;
 
 	/* Paddings */
 	--padding-5xs: 8px;
