--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -2,7 +2,6 @@
 	display: flex;
 	align-items: center;
 	position: relative;
-	border-radius: 40px;
 }
 
 .submitBtn {
@@ -28,6 +27,8 @@
 	padding-left: 24px;
 	padding-right: 40px;
 	transition: border-bottom ease-in-out 0.3s;
+	background-color: var(--color-background);
+	color: white;
 }
 
 .searchInput:hover,
@@ -36,5 +37,6 @@
 }
 
 .searchInput::placeholder {
-	color: var(--color-deepskyblue);
+	color: white;
+	font-weight: 500;
 }
