--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,7 +1,33 @@
+.findalphaKorea {
+  margin: 0;
+}
+.info {
+  position: absolute;
+  top: 168px;
+  left: 237px;
+  white-space: pre-wrap;
+}
+.findalphaInc {
+  position: relative;
+}
+.footerTabs {
+  position: absolute;
+  top: 132px;
+  left: 237px;
+  width: 591px;
+  height: 23px;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-between;
+  gap: 30px;
+  font-size: var(--desktop-main-regular-size);
+}
+
 .navContainer {
   background-color: var(--color-gray-100);
 
-  padding: 10px 235px;
+  padding: 40px 235px;
 }
 
 .nav {
@@ -46,4 +72,15 @@
   position: relative;
   white-space: nowrap;
   width: fit-content;
+}
+
+.footer {
+  position: relative;
+  background-color: var(--color-gray-100);
+  width: 100%;
+  height: 257px;
+  text-align: left;
+  font-size: 12px;
+  color: var(--color-lightslategray);
+  font-family: var(--font-noto-sans-kr);
 }
