--- a/src/components/ValueChain/ValueChain.module.css
+++ b/src/components/ValueChain/ValueChain.module.css
@@ -1,17 +1,54 @@
-.valueChainVisual {
-  position: relative;
-  background-color: #ffffff;
-  margin-left: 192px;
-  margin-right: 192px;
-  width: auto;
-  height: 484px;
+.companySection {
+  left: 995px;
+  width: 430px;
+  height: 410px;
   overflow: hidden;
+  flex-shrink: 0;
+}
+.companyList,
+.valueChain {
+  position: absolute;
+  top: 5px;
+  border-radius: var(--br-5xs);
+  overflow: auto;
+}
+.companyList {
+  left: 995px;
+  background-color: #2c2c2c;
+  width: 440px;
+  height: 420px;
+  flex-direction: column;
+  padding: 5px;
+  box-sizing: border-box;
+  align-items: flex-start;
+}
+.valueChain {
+  background-color: #2c2c2c;
+  width: 985px;
+  height: 420px;
 }
 
-.valuechainsection {
-  border-radius: var(--br-5xs);
-  background-color: #2c2c2c;
-  height: 504px;
-  padding: 10px 0; /* 상하 패딩은 10px, 좌우 패딩은 0 (left와 right 속성으로 간격을 조절) */
+.valueChainVisual {
+  position: relative;
+  background-color: #000000;
+  margin-left: 192px;
+  margin-right: 192px;
+  min-width: 1440px;
+  height: 430px;
+  padding: 5px;
+  overflow: hidden; /* 필요하다면 auto로 변경 */
+  justify-content: space-between;
+}
+
+.valueChainsection {
+  position: relative;
+  background-color: var(--color-gray-200);
+  width: 100%;
+  height: 430px;
+  overflow: hidden;
+  text-align: left;
+  font-size: var(--font-size-2xs);
+  color: var(--color-white);
+  font-family: var(--font-noto-sans);
   box-sizing: border-box; /* padding을 포함한 크기로 설정 */
 }
