노드 글자 위치와 폰트 수정

--- a/src/components/Graph/Graph.module.css
+++ b/src/components/Graph/Graph.module.css
@@ -1,4 +1,16 @@
+@font-face {
+	font-family: "GmarketSansMedium";
+	src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff")
+		format("woff");
+	font-weight: normal;
+	font-style: normal;
+}
+
 .graph {
-  background-color: var(--color-gray-200);
-  padding: 5px 5px;
+	background-color: var(--color-gray-200);
+	padding: 5px 5px;
+}
+
+.font {
+	font-family: "GmarketSansMedium", sans-serif;
 }
