--- a/src/components/ValueChain/ValueChain.module.css
+++ b/src/components/ValueChain/ValueChain.module.css
@@ -1,10 +1,3 @@
-.companySection {
-  left: 995px;
-  width: 430px;
-  height: 410px;
-  overflow: hidden;
-  flex-shrink: 0;
-}
 .companyList,
 .valueChain {
   position: absolute;
@@ -26,6 +19,7 @@
   background-color: #2c2c2c;
   width: 985px;
   height: 420px;
+  padding: 10px;
 }
 
 .valueChainVisual {
@@ -33,7 +27,6 @@
   background-color: #000000;
   margin-left: 192px;
   margin-right: 192px;
-  min-width: 1440px;
   height: 430px;
   padding: 5px;
   overflow: hidden; /* 필요하다면 auto로 변경 */
