--- a/src/components/KeyWordName/KeyWordName.module.css
+++ b/src/components/KeyWordName/KeyWordName.module.css
@@ -10,6 +10,7 @@
   justify-content: center;
   font-family: "Poppins";
   width: 126px;
+  color: var(--color-deepskyblue);
 }
 .companyList {
   left: 1185px;
