--- a/src/components/ValueChain/ValueChain.module.css
+++ b/src/components/ValueChain/ValueChain.module.css
@@ -1,15 +1,19 @@
 .keywordItem {
-  width: 120px; /* 원하는 사각형의 가로 크기를 설정합니다. */
-  height: 80px; /* 원하는 사각형의 세로 크기를 설정합니다. */
+  width: calc(33.33% - 10px); /* 화면의 1/3 너비에서 여백을 뺀 값 */
+  height: 40px; /* 원하는 사각형의 세로 크기를 설정합니다. */
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 10px;
-  background-color: #f0f0f0;
-  border: 1px solid #000;
+  margin: 5px; /* 주변 여백을 설정 */
+  background-color: #484343;
+  border: 1px solid #232323;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
 }
-
+.keywordList {
+  display: flex;
+  flex-wrap: wrap; /* 아이템들이 한 줄을 넘어갈 때 아래로 감 */
+  justify-content: start; /* 시작 부분부터 아이템을 배치 */
+}
 .companyList,
 .valueChain {
   position: absolute;
@@ -18,9 +22,9 @@
   overflow: auto;
 }
 .companyList {
-  left: 995px;
+  left: 835px;
   background-color: #2c2c2c;
-  width: 440px;
+  width: 575px;
   height: 420px;
   flex-direction: column;
   padding: 5px;
@@ -29,7 +33,7 @@
 }
 .valueChain {
   background-color: #2c2c2c;
-  width: 985px;
+  width: 820px;
   height: 420px;
   padding: 10px;
 }
