--- a/src/components/ValueChain/ValueChain.module.css
+++ b/src/components/ValueChain/ValueChain.module.css
@@ -1,6 +1,6 @@
 .keywordItem {
   width: calc(33.33% - 10px); /* 화면의 1/3 너비에서 여백을 뺀 값 */
-  height: 40px; /* 원하는 사각형의 세로 크기를 설정합니다. */
+  height: 45px; /* 원하는 사각형의 세로 크기를 설정합니다. */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,7 +12,7 @@
 .keywordList {
   display: flex;
   flex-wrap: wrap; /* 아이템들이 한 줄을 넘어갈 때 아래로 감 */
-  justify-content: start; /* 시작 부분부터 아이템을 배치 */
+  justify-content: flex-start; /* 시작 부분부터 아이템을 배치 */
 }
 .companyList,
 .valueChain {
@@ -23,7 +23,7 @@
 }
 .companyList {
   left: 835px;
-  background-color: #2c2c2c;
+  background-color: #3e3e3e;
   width: 575px;
   height: 420px;
   flex-direction: column;
@@ -32,15 +32,52 @@
   align-items: flex-start;
 }
 .valueChain {
+  background-color: #3e3e3e;
+  width: 820px;
+  height: 170px;
+  padding: 10px;
+}
+
+.valueChain2 {
+  background-color: #3e3e3e;
+  width: 820px;
+  height: 170px;
+  padding: 10px;
+  margin-top: 5px; /* 원하는 거리만큼 조절하세요. */
+}
+
+.titleBox {
   background-color: #2c2c2c;
   width: 820px;
-  height: 420px;
+  height: 70px;
+  padding: 0px;
+  margin-top: 175px; /* 원하는 거리만큼 조절하세요. */
+}
+
+.keywords {
+  position: absolute;
+  top: 190px;
+  left: -10px;
+  font-size: 30px;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "Poppins";
+  width: 250px;
+  color: var(--color-deepskyblue);
+}
+
+.keyWordChain {
+  background-color: #ffffff;
+  width: 840px;
+  height: 170px;
   padding: 10px;
 }
 
 .valueChainVisual {
   position: relative;
-  background-color: #000000;
+  background-color: #2c2c2c;
   margin-left: 192px;
   margin-right: 192px;
   height: 430px;
@@ -51,7 +88,7 @@
 
 .valueChainsection {
   position: relative;
-  background-color: var(--color-gray-200);
+  background-color: #2c2c2c;
   width: 100%;
   height: 430px;
   overflow: hidden;
