스크롤바 디자인 수정

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,42 +3,58 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400&display=swap");
 body {
-  margin: 0;
-  line-height: normal;
+	margin: 0;
+	line-height: normal;
 }
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
+html::-webkit-scrollbar {
+	width: 10px;
+}
+
+html::-webkit-scrollbar-track {
+	background: #faf8ff;
+}
+
+html::-webkit-scrollbar-thumb {
+	background-color: #3e4044;
+	border-radius: 5px;
+}
+
+html::-webkit-scrollbar-thumb:hover {
+	background-color: #232323;
+}
 :root {
-  /* fonts */
-  --desktop-h3: Montserrat;
-  --font-poppins: Poppins;
-  --font-noto-sans-kr: "Noto Sans KR";
-  --desktop-main-regular: Raleway;
+	/* fonts */
+	--desktop-h3: Montserrat;
+	--font-poppins: Poppins;
+	--font-noto-sans-kr: "Noto Sans KR";
+	--desktop-main-regular: Raleway;
 
-  /* font sizes */
-  --desktop-menu-size: 14px;
-  --font-size-16xl: 35px;
-  --desktop-main-regular-size: 16px;
-  --desktop-h3-size: 24px;
+	/* font sizes */
+	--desktop-menu-size: 14px;
+	--font-size-16xl: 35px;
+	--desktop-main-regular-size: 16px;
+	--desktop-h3-size: 24px;
 
-  /* Colors */
-  --color-black: #000;
-  --color-deepskyblue: #1eb5e4;
-  --color-deepskyblue-deep: #006f91;
-  --color-gray-100: #2c2c2c;
-  --color-gray-200: #232323;
-  --color-white: #fff;
-  --color-lightslategray: #9a95a3;
-  --general-blue: #381ddb;
-  --color-background: #232323;
+	/* Colors */
+	--color-black: #000;
+	--color-deepskyblue: #1eb5e4;
+	--color-deepskyblue-deep: #006f91;
+	--color-gray-100: #2c2c2c;
+	--color-gray-200: #232323;
+	--color-white: #fff;
+	--color-lightslategray: #9a95a3;
+	--general-blue: #381ddb;
+	--color-background: #232323;
 
-  /* Paddings */
-  --padding-5xs: 8px;
-  --padding-base: 16px;
+	/* Paddings */
+	--padding-5xs: 8px;
+	--padding-base: 16px;
 
-  /* Effects */
-  --small: 0px 10px 40px rgba(34, 34, 34, 0.15);
+	/* Effects */
+	--small: 0px 10px 40px rgba(34, 34, 34, 0.15);
 }
