--- a/client/src/components/LineChart/LineChart.module.css
+++ b/client/src/components/LineChart/LineChart.module.css
@@ -1,12 +1,13 @@
-.graphTitle {
-	font-size: 1.5rem;
+.lineTitle {
+	font-size: 2rem;
 	font-weight: 600;
 	margin-bottom: 1rem;
 	text-align: center;
 	color: white;
 }
 
-.graph {
-	width: 100%;
-	height: 100%;
+.line {
+	max-width: 1000px;
+	height: 300px;
+	margin: 0 auto;
 }
