--- a/client/src/components/Section3/Section3.module.css
+++ b/client/src/components/Section3/Section3.module.css
@@ -94,7 +94,7 @@
   height: 47.85px;
   mix-blend-mode: normal;
 }
-.vectorIcon1 {
+.vectorIcon {
   position: absolute;
   height: 21.21%;
   width: 23.33%;
@@ -106,6 +106,7 @@
   overflow: hidden;
   max-height: 100%;
 }
+
 .consumerGoods {
   position: absolute;
   top: calc(50% - 175px);
