company list 오른쪽 margin 제거

--- a/client/src/components/ValueChain/ValueChain.module.css
+++ b/client/src/components/ValueChain/ValueChain.module.css
@@ -82,7 +82,7 @@
   margin-right: 192px;
   height: 430px;
   padding: 5px;
-  overflow: hidden; /* 필요하다면 auto로 변경 */
+  overflow: show; /* 필요하다면 auto로 변경 */
   justify-content: space-between;
 }
 
