--- a/client/src/components/InfoBar/InfoBar.module.css
+++ b/client/src/components/InfoBar/InfoBar.module.css
@@ -5,4 +5,7 @@
 	height: 400px;
 	box-sizing: border-box;
 	margin: 0 auto;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
