--- a/client/src/components/ValueChain/ValueChain.module.css
+++ b/client/src/components/ValueChain/ValueChain.module.css
@@ -22,30 +22,21 @@
   overflow: auto;
 }
 .companyList {
-  left: 710px;
+  left: 770px;
   background-color: #3e3e3e;
-  width: 578px;
+  width: 750px;
   height: 170px;
   flex-direction: column;
-  padding: 10px;
+  padding: 5px;
   box-sizing: border-box;
   align-items: flex-start;
 }
 .valueChain {
   background-color: #3e3e3e;
-  width: 692px;
+  width: 750px;
   height: 170px;
   padding: 10px;
 }
-
-.titleBox {
-  background-color: #2c2c2c;
-  width: 820px;
-  height: 70px;
-  padding: 0px;
-  margin-top: 175px; /* 원하는 거리만큼 조절하세요. */
-}
-
 .keywords {
   position: absolute;
   top: 190px;
@@ -67,18 +58,27 @@
   padding: 10px;
 }
 
+.valueChainVisual {
+  position: relative;
+  background-color: #2c2c2c;
+  margin-left: 192px;
+  margin-right: 192px;
+  height: 200px;
+  padding: 5px;
+  overflow: visible; /* 필요하다면 auto로 변경 */
+  justify-content: space-between;
+}
+
 .valueChainsection {
+  /* 박스 크기 고정위한 섹션*/
   position: relative;
   background-color: #2c2c2c;
   width: 100%;
-  height: 180px;
-  display: flex; /* flexbox를 활성화합니다. */
-  justify-content: center; /* 가로 방향 중앙 정렬 */
-  align-items: center; /* 세로 방향 중앙 정렬 */
+  height: 200px;
   overflow: hidden;
   text-align: left;
   font-size: var(--font-size-2xs);
   color: var(--color-white);
   font-family: var(--font-noto-sans);
-  box-sizing: border-box;
+  box-sizing: border-box; /* padding을 포함한 크기로 설정 */
 }
