radar graph 랜더링 로직 구현중

--- a/client/src/components/InfoBar/InfoBar.module.css
+++ b/client/src/components/InfoBar/InfoBar.module.css
@@ -24,7 +24,7 @@
 }
 
 .radarGraph {
-  background-color: #ffffff;
+  background-color: var(--color-gray-200);
   width: 750px;
   height: 400px;
   flex-direction: column;
