--- a/client/src/components/InfoBar/InfoBar.module.css
+++ b/client/src/components/InfoBar/InfoBar.module.css
@@ -1,18 +1,21 @@
 .container {
   position: relative;
-  background-color: #3e3e3e;
+  background-color: #2c2c2c;
   width: 100%;
-  height: 400px;
+  height: 420px;
   overflow: hidden;
   text-align: left;
   font-size: var(--font-size-2xs);
   color: var(--color-white);
   font-family: var(--font-noto-sans);
   box-sizing: border-box; /* padding을 포함한 크기로 설정 */
+
+  border-top: 5px solid #3e3e3e; /* 2px 두께의 흰색 테두리 */
+  border-bottom: 5px solid #3e3e3e; /* 2px 두께의 흰색 테두리 */
 }
 
 .infoBar {
-  background-color: var(--color-gray-200);
+  background-color: #2c2c2c;
   width: 750px;
   padding: 0 100px;
   height: 400px;
@@ -24,7 +27,7 @@
 }
 
 .radarGraph {
-  background-color: var(--color-gray-200);
+  background-color: #2c2c2c;
   width: 400px;
   height: 400px;
   flex-direction: column;
@@ -36,7 +39,7 @@
 .graphVisual {
   display: flex; /* Flexbox를 활성화합니다. */
   flex-direction: row; /* 수평 정렬 */
-  background-color: #3e3e3e;
+  background-color: #2c2c2c;
   margin-left: 195px;
   margin-right: 210px;
   height: 400px;
