--- a/client/src/components/InfoBar/InfoBar.module.css
+++ b/client/src/components/InfoBar/InfoBar.module.css
@@ -10,8 +10,8 @@
   font-family: var(--font-noto-sans);
   box-sizing: border-box; /* padding을 포함한 크기로 설정 */
 
-  border-top: 5px solid #3e3e3e; /* 2px 두께의 흰색 테두리 */
-  border-bottom: 5px solid #3e3e3e; /* 2px 두께의 흰색 테두리 */
+  border-top: 2px solid #696969; /* 2px 두께의 회색 테두리 */
+  border-bottom: 2px solid #696969; /* 2px 두께의 회색 테두리 */
 }
 
 .infoBar {
