--- a/client/src/components/TreeMap/TreeMap.module.css
+++ b/client/src/components/TreeMap/TreeMap.module.css
@@ -1,4 +1,9 @@
 .treeMapWrapper {
 	background-color: #2c2c2c;
-	/* 필요한 다른 스타일을 여기에 추가하세요. */
+}
+
+.treeMapWrapper {
+	position: relative;
+
+	padding: 20px 0px;
 }
