Category 마우스 hover 효과 추가

--- a/client/src/components/Section2/Section2.module.css
+++ b/client/src/components/Section2/Section2.module.css
@@ -142,3 +142,6 @@
   color: var(--color-white);
   font-family: var(--desktop-main-regular);
 }
+.enlargeOnHover:hover {
+  transform: scale(1.1); 
+}
