--- a/client/src/components/Section1/Section1.module.css
+++ b/client/src/components/Section1/Section1.module.css
@@ -146,3 +146,6 @@
   color: var(--color-white);
   font-family: var(--desktop-main-regular);
 }
+.enlargeOnHover:hover {
+  transform: scale(1.1); 
+}
